--- a/index.html
+++ b/index.html
@@ -13,9 +13,10 @@
     <div class="container">
       <div class="slider">
         <div class="img-slider">
-          <div class="cont-img active">
-            <!-- COMMENTO PER INSERIRLI IN MANIERA DINAMICA -->
-            <!-- <img src="img/01.jpg" alt="" />
+          <!-- COMMENTO PER INSERIRLI IN MANIERA DINAMICA -->
+          <!-- <div class="cont-img active">
+           
+            <img src="img/01.jpg" alt="" />
           </div>
           <div class="cont-img">
             <img src="img/02.jpg" alt="" />
